[Terry N.] allow platform specific properties to be set at JVM startup
git-svn-id: svn+ssh://eos.nps.edu/usr/local/svn/wcm/Viskit/trunk@2401 0de750ab-c0a9-dc11-9d74-0011435b89d6